--- a/real_time_bus_tracker/android/app/src/main/AndroidManifest.xml
+++ b/real_time_bus_tracker/android/app/src/main/AndroidManifest.xml
@@ -41,6 +41,11 @@
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDi2UUGCPj-QPQ0cI5Hta2FQTkeuAtc9Ho"
+            />
+
+        <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
