--- a/real_time_bus_tracker/pubspec.yaml
+++ b/real_time_bus_tracker/pubspec.yaml
@@ -21,13 +21,15 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  google_maps_flutter: ^2.0.1
-  firebase_auth: ^0.16.0
-  google_sign_in: ^4.5.1
-  geolocator: ^4.0.3
   flutter:
     sdk: flutter
-
+  google_maps_flutter: ^2.0.1
+  firebase_core: ^0.7.0
+#  firebase_analytics: ^5.0.2
+  firebase_auth: ^0.20.1
+  cloud_firestore: ^0.16.0+1
+  google_sign_in: ^4.5.1
+  geolocator: ^4.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
