--- a/real_time_bus_tracker/pubspec.yaml
+++ b/real_time_bus_tracker/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  geoflutterfire: ^2.2.2
 
 assets:
   - assets/
