--- a/real_time_bus_tracker/pubspec.yaml
+++ b/real_time_bus_tracker/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   geolocator: ^4.0.3
   flutter:
     sdk: flutter
-
+  flutter_auth_buttons: ^0.10.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,6 +50,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/UI/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
